--- a/src/background.scss
+++ b/src/background.scss
@@ -25,7 +25,8 @@ $time-4: 600s;
 
 /* Styles */
 html, body {
-    height: 100%;
+    height: auto;
+    width: 100%;
 }
 
 body {
@@ -41,8 +42,8 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 
