--- a/src/header.scss
+++ b/src/header.scss
@@ -4,7 +4,8 @@ body {
 }
 
 .App-header{
-    padding: 50px;
+    padding-top: 50px;
+	padding-bottom: 50px;
 }
 
 .title {
