--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
+  width: 100vw;
 }
 
 code {
@@ -15,6 +16,6 @@ code {
 
 div#root{
   height: 100%;
-  width: 100%
+  width: 100%;
 }
 
